--- a/argocdappset/argoapp.yaml
+++ b/argocdappset/argoapp.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: 'git@github.com:amitopenwriteup/nginx-argoproj.git'
     targetRevision: main
-    path: dev
+    path: argocdappset/dev
   destination:
     name: arn:aws:eks:ap-south-1:130705418859:cluster/stage-devseccops-eks-cluster
     namespace: stage-nginx-namespace
