--- a/argocdappset/argoproj.yaml
+++ b/argocdappset/argoproj.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: git@github.com:amitopenwriteup/nginx-argoproj.git
     targetRevision: main
-    path: proj
+    path: argocdappset/proj
   destination:
     name: arn:aws:eks:ap-south-1:130705418859:cluster/stage-devseccops-eks-cluster
     namespace: microservices
