--- a/argo-applications/nginx-sync.yaml
+++ b/argo-applications/nginx-sync.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: nginx
+  name: nginx-sync
   namespace: argocd
 spec:
   destination:
