--- a/nginx-sync/templates/deployment.yaml
+++ b/nginx-sync/templates/deployment.yaml
@@ -77,7 +77,7 @@ spec:
       volumes:
         - name: config-volume
           configMap:
-            name: {{ .Values.configMap.name }}
+            name: cmlocal
 ---
 apiVersion: batch/v1
 kind: Job
