--- a/nginx-pv/pvpod.yaml
+++ b/nginx-pv/pvpod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: mypod
-  namespace: stage-nginx-namespace
+  namespace: stage1-nginx-namespace
 spec:
   containers:
     - name: myfrontend
