--- a/nginx/templates/deployment.yaml
+++ b/nginx/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       containers:
         - name: nginx
           securityContext: {}
-          image: nginx:latest
+          image: amitow/nginx:v1
           imagePullPolicy: 'Always'
           env:
             - name: "ENVIRONMENT"
