--- a/nginx-conf/statefulset.yaml
+++ b/nginx-conf/statefulset.yaml
@@ -3,7 +3,7 @@ kind: StatefulSet
 metadata:
   name: web-stateful
 spec:
-  serviceName: "nginx"
+  serviceName: "nginx-service"
   replicas: 2
   selector:
     matchLabels:
